--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap');
+
+/* Global Variables */
+
+:root{
+  /* Background Color */
+  --primary-color:#f7eeee;
+  --secondary-color:#f2f2f2;
+  /* --primary-nav-color: */
+  --primary-bg:rgb(246, 238, 238)
+  --font-color:#b7b7b7;
+  /* --bg-color: #f8f8ff; */
+  --bg-color:#f5f5f5;
+  --bg-dark-color:#0c0b0b;
+  --white-color:#fdfffc;
+  --border-color-light:rgb(255,255,255,0.2);
+  --box-shadow:0 1rem 3rem rgb(0 0 0 /12%);
+  --drak-layer-color:linear-gradient(to top, rgb(21 21 21 /67%), rgb(23 23 23 /17%));
+  
+  /* Font family */
+  --primary-font:'Josefin Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+html,body{
+  font-size: 14px;
+  font-family: var(--primary-font);
+  background-color: var(--bg-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Custom Scrollbar */
+
+::-webkit-scrollbar{
+  width:.375rem;
+}
+::-webkit-scrollbar-track{
+  background:var(var(--primary-color));
+}
+
+::-webkit-scrollbar-thumb{
+  background: var(--secondary-color);
+}
+
+
+/* Pre-defined classes css */
+a{
+  text-decoration: none;
+}
+
+.container-fluid{
+  width:100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+.container{
+  width:auto;
+  max-width:1320px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+.btn_wrapper{
+  margin-top: 5rem;
+
+  @media(max-width:992px){
+    width:100%;
+    text-align:center;
+    display:block;
+  }
+  @media(max-width:767px){
+    margin-bottom: 3rem;
+  }
+  .btn{
+    padding: 0.857rem 2.571rem;
+    font-size: 1.143rem;
+    border-radius:2.143rem;
+    font-weight: 600;
+    box-shadow: 0 0.5rem 1rem rgb(16 16 16);
+    outline:2px solid var(--secondary-color);
+    outline-offset:0px;
+    border:none;
+    cursor: pointer;
+    background: var(--secondary-color);
+    transition: all .3s ease-in-out;
+    
+
+    &:hover{
+      outline-offset: .7143rem;
+    }
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
+h1{
+  font-size: 3.875rem;
+  margin-bottom: 1.25rem;
+  font-weight: 600;
+  color: var(--white-color);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  font-size: 3.875rem;
+  margin-bottom: 1.25rem;
+  font-weight: 600;
+  color: var(--white-color);
+}
+h1{
+  font-size: 3.875rem;
+  margin-bottom: 1.25rem;
+  font-weight: 600;
+  color: var(--white-color);
 }
