--- a/src/App.css
+++ b/src/App.css
@@ -108,9 +108,38 @@ h1{
   font-weight: 600;
   color: var(--white-color);
 }
-h1{
-  font-size: 3.875rem;
-  margin-bottom: 1.25rem;
+h2{
+  font-size: 2.875rem;
   font-weight: 600;
   color: var(--white-color);
+}
+h3{
+  font-size: 2.25rem;
+  font-weight: 600;
+  color: var(--white-color);
+}
+h4{
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+  font-weight: 600;
+  color: var(--white-color);
+}
+h5{
+  font-size: 1.5rem;
+  line-height: 1.2rem;
+  margin-bottom: .9375rem;
+  font-weight: 500;
+  color: var(--white-color);
+}
+h6{
+  font-size: .875rem;
+  margin-bottom: .9375rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: var(--white-color);
+}
+p{
+  font-size: 1rem;
+  color:white;
+  line-height: 1.625;
 }
