--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,7 @@
   --font-color:#b7b7b7;
   /* --bg-color: #f8f8ff; */
   --bg-color:#f5f5f5;
-  --bg-dark-color:#0c0b0b;
-  --white-color:#fdfffc;
+  --bg-dark-color:#0c0b0black#fdfffc;
   --border-color-light:rgb(255,255,255,0.2);
   --box-shadow:0 1rem 3rem rgb(0 0 0 /12%);
   --drak-layer-color:linear-gradient(to top, rgb(21 21 21 /67%), rgb(23 23 23 /17%));
@@ -100,46 +99,45 @@ h1{
   font-size: 3.875rem;
   margin-bottom: 1.25rem;
   font-weight: 600;
-  color: var(--white-color);
+  color: black;
 }
 h1{
   font-size: 3.875rem;
   margin-bottom: 1.25rem;
   font-weight: 600;
-  color: var(--white-color);
+  color: black;
 }
 h2{
   font-size: 2.875rem;
   font-weight: 600;
-  color: var(--white-color);
+  color: black;
 }
 h3{
   font-size: 2.25rem;
   font-weight: 600;
-  color: var(--white-color);
+  color: black;
 }
 h4{
   font-size: 1.5rem;
   line-height: 2.25rem;
   font-weight: 600;
-  color: var(--white-color);
+  color: black;
 }
 h5{
   font-size: 1.5rem;
   line-height: 1.2rem;
   margin-bottom: .9375rem;
   font-weight: 500;
-  color: var(--white-color);
+  color: black;
 }
 h6{
   font-size: .875rem;
   margin-bottom: .9375rem;
   text-transform: uppercase;
   font-weight: 300;
-  color: var(--white-color);
+  color: black;
 }
 p{
   font-size: 1rem;
-  color:white;
-  line-height: 1.625;
+blacke-height: 1.625;
 }
