--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,11 @@
   --primary-font:'Josefin Sans', sans-serif;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 html,body{
   font-size: 14px;
@@ -84,7 +89,8 @@ a{
     outline-offset:0px;
     border:none;
     cursor: pointer;
-    background: var(--secondary-color);
+    color: white;
+    background: #c88937;
     transition: all .3s ease-in-out;
     
 
