--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 :root{
   /* Background Color */
   --primary-color:#f7eeee;
-  --secondary-color:#f2f2f2;
+  --secondary-color:#2c1c06;
   --primary-nav-color:#8c6026;
   --primary-bg:rgb(246, 238, 238)
   --font-color:#b7b7b7;
@@ -34,7 +34,7 @@ html,body{
 
 /* Custom Scrollbar */
 
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
   width:.375rem;
 }
 ::-webkit-scrollbar-track{
@@ -43,7 +43,7 @@ html,body{
 
 ::-webkit-scrollbar-thumb{
   background: var(--secondary-color);
-}
+} */
 
 
 /* Pre-defined classes css */
@@ -145,5 +145,5 @@ h6{
 }
 p{
   font-size: 1rem;
-blacke-height: 1.625;
+  line-height: 1.625;
 }
