--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,7 @@
     z-index:5;
 
     &.sticky{
-        position: fixed;
+        /* position: fixed; */
         top:0;
         left:0;
         right:0;
@@ -21,13 +21,13 @@
         height:auto;
         background-color: var(--bg-color);
         padding: 0.500rem 0 1rem;
-        transform: translateY(0px);
-        transition: all 0.3s ease-in-out;
-        animation: navbar 0.3s linear forwards;
+        /* transform: translateY(0px); */
+        /* transition: all 0.3s ease-in-out;
+        animation: navbar 0.3s linear forwards; */
     }
 
     background-color: var(--bg-color);
-    padding: 0.5rem 0 1rem;
+    padding: 0.500rem 0 ;
     transform: translateY(0px);
     transition: 0.3s all ease-in-out;
 
@@ -68,7 +68,7 @@
                 top:0;
                 left: 0;
                 bottom: 0;
-                padding: 0;
+                /* padding: 0; */
                 background: var(--bg-color);
                 z-index: 9999;
                 transform: translateX(-250px);
@@ -111,7 +111,7 @@
                     @media(max-width:992px){
                         padding: 1rem 0;
                         display: block;
-                        padding: 0;
+                        /* padding: 0; */
                     }
 
                     &.active,
