--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,3 +1,163 @@
 .rice{
     color:#c88937;
 }
+#home{
+    position:relative;
+    overflow: hidden;
+    min-height: calc(100vh - 84px);
+    padding:8rem 0 0;
+    /* box-sizing: border-box; */
+    @media (max-width:767px){
+        padding:3rem 0 0;
+        /* min-height: auto;  */
+    }
+
+    .banner_image{
+        position: absolute;
+        overflow: hidden;
+        background-size:cover;
+        top:0;
+        background-color: var(--bg-color);
+        z-index:1;
+        width:100%;
+        height:100%;
+        min-height: calc(100vh - 84px);
+        transform:scale(1.1);
+        animation: wave 3s linear infinite;
+
+        &:before{
+            content:'';
+            position: absolute;
+            top:0;
+
+            min-height: 100%;
+            left:0;
+            right:0;
+            z-index:2;
+            background:var(--dark-layer-color);
+        }
+    }
+    .banner_outer{
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+        position:relative;
+        z-index:3;
+
+        @media (max-width:992px){
+            flex-direction: column-reverse;
+        }
+
+        .col{
+            width:calc(100% / 2 - 15px);
+            height:auto;
+            top: 0;
+            position:relative;
+
+            @media (max-width:992px){
+                width:fit-content;
+                padding:2rem;
+            }
+            @media (max-width:767px){
+                padding:1.5rem;
+            }
+        }
+        .title{
+            width:80%;
+            font-size:4rem;
+            line-height: 5rem;
+            font-weight: 200;
+            margin-bottom:1rem;
+            
+            /* text-transform: uppercase; */
+
+            & span{
+                font-weight: 800;
+            }
+            @media (max-width:992px){
+                width:55%;
+                /* margin-top:10rem; */
+                text-align: center;
+                line-height: 4rem;
+               
+            }
+            @media (max-width:767px){
+                width:100%;
+                align-items: center;
+            justify-content: center;
+                font-size: 1.5rem;
+                margin-left: 6rem;
+            }
+            
+        }
+
+        & p{
+            width: 80%;
+            margin: 0;
+            padding: 0;
+            font-size: 1.143rem;
+            line-height: 2rem;
+            color: black;
+
+            @media(max-width: 992px){
+                width: 100%;
+                text-align: center;
+            }
+        }
+        .sub_banner_image{
+            background-color: var(--secondary-color);
+            border-radius: 0 3rem;
+            margin-top:2.2rem;
+
+            & img{
+                border-radius: 0 3.571rem;
+                margin-top:0rem;
+                margin-left:-2rem;
+                max-width: 100%;
+            }
+        }
+       
+        .banner_style_1{
+            /* margin-bottom: 10px; */
+            display: flex;
+            margin-top: 10px;
+           justify-content: flex-end;
+
+           /* background-color: var(--primary-nav-color); */
+            /* color: white; */
+            & h4{
+                margin-left:5px;
+                margin-right: 20px;
+                font-size: 19px;
+            }
+            
+            @media (max-width:992px){
+                left:-20px;
+            }
+        }
+        /* .banner_style_2{
+            border-radius: 8px;
+            width:max-content;
+            height:max-content;
+            background-color: var(--secondary-color);
+
+        }
+        .banner_style_3{
+            border-radius: 8px;
+            width:max-content;
+            height:max-content;
+            background-color: var(--secondary-color); */
+
+        /* } */
+    }
+}
+
+@keyframes wave{
+    0%,
+    100%{
+        transform: translate(0px, 0px);
+    }
+    50%{
+        transform: translate(-10px, -10px);
+    }
+}
