done with survices and footer

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,9 @@
   /* Background Color */
   --primary-color:#f7eeee;
   --secondary-color:#2c1c06;
-  --primary-nav-color:#8c6026;
-  --primary-bg:rgb(246, 238, 238)
+  --primary-nav-color:#c88937;
+  --primary-bg:rgb(246, 238, 238);
+  --bg-footer-color:#483113;
   --font-color:#b7b7b7;
   /* --bg-color: #f8f8ff; */
   --bg-color:#f5f5f5;
