--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -4,33 +4,35 @@
 #home{
     position:relative;
     overflow: hidden;
-    min-height: calc(100vh - 84px);
+    min-height: calc(200vh - 84px);
     padding:8rem 0 0;
     /* box-sizing: border-box; */
     @media (max-width:767px){
         padding:3rem 0 0;
-        /* min-height: auto;  */
+        min-height: 150vh; 
     }
 
     .banner_image{
         position: absolute;
         overflow: hidden;
         background-size:cover;
+        /* padding: 3rem 15rem; */
+        justify-content: center;
+        
         top:0;
         background-color: var(--bg-color);
         z-index:1;
         width:100%;
-        height:100%;
+        height:auto;
         min-height: calc(100vh - 84px);
         transform:scale(1.1);
-        animation: wave 3s linear infinite;
+        /* animation: wave 3s linear infinite; */
 
         &:before{
             content:'';
             position: absolute;
             top:0;
-
-            min-height: 100%;
+            min-height: 80%;
             left:0;
             right:0;
             z-index:2;
@@ -43,6 +45,8 @@
         justify-content:space-between;
         position:relative;
         z-index:3;
+        /* margin: 0 1rem; */
+        /* animation: wave 3s linear infinite; */
 
         @media (max-width:992px){
             flex-direction: column-reverse;
@@ -78,7 +82,7 @@
                 width:55%;
                 /* margin-top:10rem; */
                 text-align: center;
-                line-height: 4rem;
+                line-height: 3rem;
                
             }
             @media (max-width:767px){
@@ -86,7 +90,7 @@
                 align-items: center;
             justify-content: center;
                 font-size: 1.5rem;
-                margin-left: 6rem;
+                /* margin-left: 6rem; */
             }
             
         }
@@ -107,12 +111,12 @@
         .sub_banner_image{
             background-color: var(--secondary-color);
             border-radius: 0 3rem;
-            margin-top:2.2rem;
+            margin-top:4.2rem;
 
             & img{
                 border-radius: 0 3.571rem;
-                margin-top:0rem;
-                margin-left:-2rem;
+                margin-top:0.4rem;
+                margin-left:-1rem;
                 max-width: 100%;
             }
         }
@@ -127,7 +131,7 @@
             /* color: white; */
             & h4{
                 margin-left:5px;
-                margin-right: 20px;
+                margin-right: 10px;
                 font-size: 19px;
             }
             
@@ -149,7 +153,66 @@
             background-color: var(--secondary-color); */
 
         /* } */
+
     }
+    .title_two{
+        margin-top:6rem;
+        margin-left: 2rem;
+    }
+    .survices{
+        display:flex;
+        align-items:center;
+        /* min-height: 10vh; */
+        /* height: 300px; */
+        justify-content:space-between;
+        position:relative;
+    /* margin: 0 2rem; */
+            
+            .sub_banner_image{
+                margin-top:3.2rem;
+                margin-left: 2rem;
+                /* display: flex;
+                justify-content: flex-end; */
+                & img{
+                    /* border-radius: 0 3.571rem; */
+                    /* margin-top:0rem; */
+                    /* margin-left:-2rem; */
+                    max-width: 100%;
+                    height: 100%;
+                    /* padding-bottom: 15px; */
+                }
+
+                & h4{
+                    color: #c88937;
+                    margin-top: 6px;
+                  font-size: 20px;
+                }
+
+                & p{
+                    font-size: 15px;
+                }
+            }
+
+            .sub_banner_image2{
+                margin-top:3.2rem;
+                margin-left: 4rem;
+                padding-bottom:24px;
+                & img{
+                    max-width: 87%;
+                    height: 80%;
+                    /* margin-bottom: 20px; */
+                }
+                & h4{
+                    color: #c88937;
+                    padding-top: 9px;
+                    font-size: 20px;
+                  }
+                  & p{
+                    font-size: 15px;
+                }
+            }
+        }
+
 }
 
 @keyframes wave{
