--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -26,25 +26,32 @@
             font-weight: 80;
             font-size: 20px;
             line-height: 26px;
-            margin: 7px;
+            margin: 3rem;
             text-align:justify;
         }
     }
 
     .sub_container2{
-        margin: 2rem;
-  
+        margin:0 5rem;
+        display: flex;
+        flex-direction: row;
+  justify-content: space-between;
+
         & h3{
             margin-bottom: 15px;
         }
         & h4{
             font-size: 20px;
+            color: white;
             margin-bottom: 15px;
         }
 
         & a{
             text-decoration: none;
             color: black;
+        }
+        @media(max-width: 992px){
+            flex-direction: column;
         }
     }
 }
