--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -4,12 +4,12 @@
 #home{
     position:relative;
     overflow: hidden;
-    min-height: calc(200vh - 84px);
+    min-height: calc(230vh - 84px);
     padding:8rem 0 0;
     /* box-sizing: border-box; */
     @media (max-width:767px){
         padding:3rem 0 0;
-        min-height: 150vh; 
+        min-height: 160vh; 
     }
 
     .banner_image{
@@ -26,7 +26,7 @@
         height:auto;
         min-height: calc(100vh - 84px);
         transform:scale(1.1);
-        /* animation: wave 3s linear infinite; */
+        animation: wave 3s linear infinite;
 
         &:before{
             content:'';
@@ -83,10 +83,15 @@
                 /* margin-top:10rem; */
                 text-align: center;
                 line-height: 3rem;
+
+                /* & h4{
+                    font-size: 0.3rem;
+                } */
                
             }
             @media (max-width:767px){
                 width:100%;
+               
                 align-items: center;
             justify-content: center;
                 font-size: 1.5rem;
@@ -99,12 +104,13 @@
             width: 80%;
             margin: 0;
             padding: 0;
-            font-size: 1.143rem;
+            font-size: 1.543rem;
             line-height: 2rem;
             color: black;
 
             @media(max-width: 992px){
                 width: 100%;
+                font-size: 1.250rem;
                 text-align: center;
             }
         }
@@ -170,47 +176,117 @@
             
             .sub_banner_image{
                 margin-top:3.2rem;
-                margin-left: 2rem;
+                padding-bottom:30px;
+                margin-left: 1.3rem;
                 /* display: flex;
                 justify-content: flex-end; */
                 & img{
+                padding: 1.2rem;
                     /* border-radius: 0 3.571rem; */
                     /* margin-top:0rem; */
                     /* margin-left:-2rem; */
-                    max-width: 100%;
+                    max-width: 90%;
                     height: 100%;
                     /* padding-bottom: 15px; */
                 }
 
                 & h4{
-                    color: #c88937;
+                    color: #9b5903;
                     margin-top: 6px;
-                  font-size: 20px;
+                    font-size: 28px;
+
+                  margin-bottom: 8px;
+                  @media(max-width: 992px){
+                    font-size: 24px;
+                  }
+
                 }
 
                 & p{
-                    font-size: 15px;
+                    text-align: justify;
+                    font-size: 1.4rem;
+                    /* margin-bottom: 5px; */
+                    /* padding-bottom: 20px; */
                 }
             }
 
             .sub_banner_image2{
-                margin-top:3.2rem;
-                margin-left: 4rem;
-                padding-bottom:24px;
+                /* margin-top:0.1rem; */
+                margin-left: 3rem;
+                background-color: var(--secondary-color);
+                border-radius:0% 10%;
+                color: white;
+                /* margin-right: 0.1rem; */
+                padding-bottom:12px;
+                @media(max-width: 992px){
+                    margin-bottom: 2rem;
+                 }
                 & img{
-                    max-width: 87%;
-                    height: 80%;
+                padding: 1.4rem;
+ @media(max-width: 992px){
+    /* margin-bottom: 1rem; */
+ }
+                    width: 70%;
+                    height: 60%;
                     /* margin-bottom: 20px; */
+                    @media(max-width:992px){
+                        max-width: 100%;
+                        height: 100%;
+                        /* margin-bottom:30px; */
+
+                    }
                 }
+                
                 & h4{
-                    color: #c88937;
+                    color: #9b5903;
                     padding-top: 9px;
-                    font-size: 20px;
+                    font-size: 28px;
+                  margin-bottom: 13px;
+                  @media(max-width: 992px){
+                    font-size: 24px;
+                  }
+
                   }
                   & p{
-                    font-size: 15px;
+                    text-align: justify;
+                    font-size: 1.4rem;
+                    margin-right: 10px;
+                    /* margin-bottom: 80px; */
                 }
             }
+
+            .btn_wrapperr{
+                margin-top: 2.7rem;
+              
+                @media(max-width:992px){
+                  width:100%;
+                  text-align:center;
+                  display:block;
+                }
+                @media(max-width:767px){
+                  margin-bottom: 8rem;
+                }
+                .btnn{
+                  padding: 0.7rem 1rem;
+                  font-size: 1rem;
+                  border-radius:2.143rem;
+                  font-weight: 400;
+                  box-shadow: 0 0.5rem 1rem rgb(16 16 16);
+                  outline:2px solid var(--secondary-color);
+                  outline-offset:0px;
+                  border:none;
+                  cursor: pointer;
+                  color: white;
+                  background: #c88937;
+                  transition: all .3s ease-in-out;
+                  
+              
+                  &:hover{
+                    outline-offset: .7143rem;
+                  }
+                }
+              }
+              
         }
 
 }
