--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,12 +1,17 @@
 .main_container{
-    background-color: rgb(125, 87, 37);
+    /* position: fixed; */
+    bottom: 0;
+    background-color: rgb(112, 86, 53);
     height: 30%;
     width: 100%;
     color: white;
+    margin-top: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+@media(max-width:992px){
+    margin-top: 470%;
+}
     .heading{
         display: flex;
         height: 100px;
@@ -20,7 +25,6 @@
 
     .sub_container{
         color: white;
-
         & h3{
             color: white;
             font-weight: 80;
