--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -4,12 +4,12 @@
 #home{
     position:relative;
     overflow: hidden;
-    min-height: calc(230vh - 84px);
+    min-height: calc(200vh - 84px);
     padding:8rem 0 0;
     /* box-sizing: border-box; */
     @media (max-width:767px){
         padding:3rem 0 0;
-        min-height: 160vh; 
+        min-height: 180vh; 
     }
 
     .banner_image{
@@ -26,7 +26,7 @@
         height:auto;
         min-height: calc(100vh - 84px);
         transform:scale(1.1);
-        animation: wave 3s linear infinite;
+        /* animation: wave 3s linear infinite; */
 
         &:before{
             content:'';
