--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,16 +1,16 @@
 .main_container{
     /* position: fixed; */
     bottom: 0;
-    background-color: rgb(112, 86, 53);
+    background-color: rgb(75, 56, 30);
     height: 30%;
-    width: 100%;
+    width: 100vw;
     color: white;
-    margin-top: 100%;
+    /* margin-top: 60%; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 @media(max-width:992px){
-    margin-top: 470%;
+    /* margin-top: 470%; */
 }
     .heading{
         display: flex;
@@ -26,7 +26,8 @@
     .sub_container{
         color: white;
         & h3{
-            color: white;
+            color:#e0dbdb;
+
             font-weight: 80;
             font-size: 20px;
             line-height: 26px;
@@ -40,13 +41,14 @@
         display: flex;
         flex-direction: row;
   justify-content: space-between;
-
+margin-bottom: 3rem;
+margin-right: 30rem;
         & h3{
             margin-bottom: 15px;
         }
         & h4{
             font-size: 20px;
-            color: white;
+            color:#e0dbdb;
             margin-bottom: 15px;
         }
 
