--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -4,7 +4,7 @@
 #home{
     position:relative;
     overflow: hidden;
-    min-height: calc(200vh - 84px);
+    min-height: calc(190vh - 84px);
     padding:8rem 0 0;
     /* box-sizing: border-box; */
     @media (max-width:767px){
@@ -162,7 +162,7 @@
 
     }
     .title_two{
-        margin-top:6rem;
+        margin-top:7rem;
         margin-left: 2rem;
     }
     .survices{
@@ -177,10 +177,13 @@
             .sub_banner_image{
                 margin-top:3.2rem;
                 padding-bottom:30px;
-                margin-left: 1.3rem;
+                margin-left: 7.3rem;
+                margin-right: 7.3rem;
                 /* display: flex;
                 justify-content: flex-end; */
                 & img{
+                border-radius: 0 40px 0 40px;
+
                 padding: 1.2rem;
                     /* border-radius: 0 3.571rem; */
                     /* margin-top:0rem; */
@@ -213,16 +216,22 @@
             .sub_banner_image2{
                 /* margin-top:0.1rem; */
                 margin-left: 3rem;
-                background-color: var(--secondary-color);
+                margin-top: 0;
+                padding: 0;
+                /* background-color: var(--secondary-color); */
                 border-radius:0% 10%;
                 color: white;
                 /* margin-right: 0.1rem; */
-                padding-bottom:12px;
+                /* padding-bottom:12px; */
                 @media(max-width: 992px){
                     margin-bottom: 2rem;
                  }
                 & img{
-                padding: 1.4rem;
+                    border-radius: 0 40px 0 40px;
+
+                margin-top: 2.7rem;
+                    padding-bottom: 1rem;
+                /* padding: 1.4rem; */
  @media(max-width: 992px){
     /* margin-bottom: 1rem; */
  }
@@ -239,7 +248,8 @@
                 
                 & h4{
                     color: #9b5903;
-                    padding-top: 9px;
+                    /* padding-top: 12px; */
+                    /* margin-top: 12px; */
                     font-size: 28px;
                   margin-bottom: 13px;
                   @media(max-width: 992px){
@@ -248,6 +258,7 @@
 
                   }
                   & p{
+                    color: black;
                     text-align: justify;
                     font-size: 1.4rem;
                     margin-right: 10px;
