--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -96,7 +96,7 @@ margin-top: 3rem;
     
         /* width: 32%;
         height: 32%; */
-        background-color: black;
+        background-color:var(--secondary-color);
         width: 53%;
         height: 100%;
 border-radius:0 10%;
@@ -118,7 +118,8 @@ border-radius:0 10%;
     .imgtwo{
         /* width: 32%;
         height: 32%; */
-        background-color: black;
+        background-color:var(--secondary-color);
+        ;
         width: 53%;
         height: 70%;
         margin-top: 2rem;
