left with media query

--- a/src/components/Export/Export.css
+++ b/src/components/Export/Export.css
@@ -234,7 +234,7 @@ margin:0 2rem;
 
         }
     }
-    .hero{
+    .heo{
         height: 20%;
         display: flex;
         flex-direction: row;
@@ -252,7 +252,7 @@ margin:0 2rem;
             padding: 0;
             margin-top: 4rem;
         }
-        .heroonee img{
+        .heoonee img{
             width: 40%;
             /* height: 20%; */
             display: flex;
@@ -265,7 +265,7 @@ margin:0 2rem;
 }
         
         }
-        .heroone img{
+        .heoone img{
             width: 50%;
             height: 50%;
             display: flex;
