--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -19,7 +19,11 @@
             width:calc(100% / 2 - 1rem);
             padding:1rem;
             box-sizing:border-box;
+/* margin-bottom: 2rem; */
 
+& h2{
+margin-bottom: 2.5rem;
+}
             @media (max-width:992px){
                 width:50%
             }
@@ -60,7 +64,7 @@
             & textarea:hover,
             .form-control:focus,
             & textarea:focus{
-                border-color:var(--primary-color);
+                border-color:var(--primary-nav-color);
                 color:black;
             }
         }
@@ -69,16 +73,24 @@
         }
         .contact_image{
             position:relative;
+            /* background: url('../../assets/contact/360_F_307854286_KWyoR5ACR7UzYql8McJd2Y5kYmmVz6t9.jpg'); */
+            background-repeat: no-repeat;
+            background-size: cover;
+            overflow: hidden;
+
 
             &:after{
-                overflow: hidden;
-                /* content:url('../../assets/about/layer_2.png'); */
-                z-index:1;
-                position:absolute;
-                top:-70px;
-                right:-20px;
-                max-width: 100%;
-            }
+                content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../../assets/contact/360_F_307854286_KWyoR5ACR7UzYql8McJd2Y5kYmmVz6t9.jpg') center/cover;
+  backdrop-filter: blur(2px);
+  filter: blur(2px);
+  z-index: -1; /* Place the pseudo-element behind the content */
+}
 
             @media (max-width: 1024px){
                 &:after{
@@ -86,11 +98,17 @@
                 }
             } 
 & h2{
-    padding:0 0 2rem 0;
+    padding:0.8rem 0.5rem 0;
 }
 .cone ,.ctwo ,.cthree, .cfour{
-    & h3, h4{
+    /* margin: 1rem; */
+    & h3{
+        font-size: 2rem;
+    }
+    & h4{
+        font-size: 1.3rem;
         padding: 1rem 0;
+        margin-bottom: 1rem;
     }
 
 }
