--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -173,7 +173,10 @@
         justify-content:space-between;
         position:relative;
     /* margin: 0 2rem; */
-            
+            @media(max-width:992px){
+                display: flex;
+                flex-direction: column;
+            }
             .sub_banner_image{
                 margin-top:3.2rem;
                 padding-bottom:30px;
