--- a/src/components/Export/Export.css
+++ b/src/components/Export/Export.css
@@ -49,7 +49,7 @@ margin-left: 6rem;
         margin-left: 15rem;
         @media(max-width:992px){
             padding: 0;
-            margin: 0;
+            margin: 0.2rem;
         }
         & h3{
             width:90%;
