--- a/src/components/manufacturing/Manufacture.css
+++ b/src/components/manufacturing/Manufacture.css
@@ -50,7 +50,7 @@ justify-content: space-between;
             font-size: 2rem;
             @media(max-width: 992px){
                 font-size: 1.5rem;
-                line-height: 24px;
+                line-height: 29px;
             }
         }
        
@@ -106,7 +106,7 @@ margin-left: 1.5rem;
     display: flex;
  border-right: 7px solid var( --secondary-color);
  border-bottom: 7px solid var( --secondary-color);
- border-radius:10px 0 10px 0;
+ border-radius:20px 0 10px 0;
  margin: 0;
  @media(max-width:992px){
     /* margin-left: 4.5rem; */
@@ -116,6 +116,7 @@ margin-left: 1.5rem;
     /* right: 0; */
     width: 100%;
     height: 80%;
+    margin-top: 4rem;
     /* margin-left: 2rem; */
     /* margin-right: 10rem; */
     
@@ -150,6 +151,8 @@ margin-left: 1.5rem;
     /* right: 0; */
     width: 100%;
     height: 100%;
+    margin-top: 4rem;
+
     /* margin-left: 2rem; */
     /* margin-right: 10rem; */
     
@@ -184,6 +187,8 @@ margin-left: 1.5rem;
     /* right: 0; */
     width: 100%;
     height: 100%;
+    margin-top: 4rem;
+
     /* margin-left: 2rem; */
     /* margin-right: 10rem; */
     
@@ -218,6 +223,8 @@ margin-left: 1.5rem;
     /* right: 0; */
     width: 100%;
     height: 100%;
+    margin-top: 4rem;
+
     /* margin-left: 2rem; */
     /* margin-right: 10rem; */
     
