--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -11,6 +11,7 @@
     @media (max-width:767px){
         padding:3rem 0 0;
         min-height: 250vh; 
+    animation: none;
     }
 
     .banner_image{
