--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -48,6 +48,14 @@ margin-right: 30rem;
     /* margin-bottom:30px; */
 
 }
+& button{
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.2rem;
+    margin-left: 0.4rem;
+    color: white;
+}
         & h3{
             margin-bottom: 15px;
         }
