--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -75,4 +75,15 @@ margin-right: 30rem;
     }
 }
 
-
+.credit{
+    margin: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    & a{
+        text-decoration: none;
+        color: black;
+    }
+    /* word-spacing: 10px; */
+}
