--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -85,5 +85,10 @@ margin-right: 30rem;
         text-decoration: none;
         color: black;
     }
+    @media(max-width: 992px){
+        font-size: 0.7rem;
+        margin: 1rem;
+        /* padding: 0; */
+    }
     /* word-spacing: 10px; */
 }
