--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -37,6 +37,9 @@ margin-bottom: 2.5rem;
 
 
         }
+        .container{
+            width: 100%;
+        }
         .alert{
             width: 100%;
             background: rgb(180, 136, 50);
