--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -167,6 +167,9 @@
                 margin-left:2px;
                 margin-right: 10px;
                 font-size: 16px;
+                @media(max-width: 992px){
+                    font-size: 14px;
+                }
             }
             
             @media (max-width:992px){
