--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -110,10 +110,14 @@ margin-top: 5rem;
     width: auto;
     display: flex;
     flex-direction: column;
-    margin-top: 8rem;
+    margin-top: 4rem;
     height: 50%;
     padding: 0;
 
+
+}
+@media(max-width:360px){
+    margin-top: 8rem;
 
 }
   
@@ -233,7 +237,7 @@ border-radius:0 10%;
         border-radius: 10px;
         margin-top: 4.5rem;
         @media(max-width: 992px){
-    background-color: #d3bfa0;
+    background-color:rgba(255, 253, 253, 0.95);
     font-size: 1.3rem;
         }
     }
