--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -2,7 +2,7 @@
       height: auto;
       position:relative;
       @media(max-width:992px){
-        height: 270vh;
+        height: 271vh;
         
       }
     .head{
@@ -116,11 +116,14 @@ margin-top: 5rem;
 
 
 }
+
 @media(max-width:360px){
     margin-top: 8rem;
 
 }
-  
+/* @media(max-width:460px){
+    margin-top: 0.1em;
+    } */
     .imgone{
     
         /* width: 32%;
@@ -136,6 +139,7 @@ border-radius:0 10%;
     margin-left: 20%;
     padding: 0;
 }
+
         & img{
             justify-content: center;
             /* margin: 1rem; */
@@ -147,6 +151,7 @@ border-radius:0 10%;
     height: 90%;
     border-radius:0 10% 0 10%;
     margin-top: 1rem;
+  
         }
     }
     .imgtwo {
