--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -39,6 +39,19 @@ margin-bottom: 2.5rem;
         }
         .container{
             width: 100%;
+          
+        }
+        .containerr{
+            width: 100%;
+            padding: 1rem;
+            & button{
+                background-color: transparent;
+                border: 0;
+                cursor: pointer;
+                font-size: 1.2rem;
+                margin-left: 0.4rem;
+                color: black;
+            }
         }
         .alert{
             width: 100%;
